# pyiron_continuum

./: .coveragerc  .coveralls.yml  .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.binder/: environment.yml  postBuild
.ci_support/: build_notebooks.sh  build_notebooks_damask.sh  build_notebooks_fenics.sh  environment-notebooks-damask.yml  environment-notebooks-fenics.yml  environment-notebooks-integration.yml  environment-notebooks.yml  environment-notebooks_damask.yml  environment-pypi-unit.yml  environment.yml  exclude  exclude_damask  exclude_for_damask  exclude_for_fenics
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md  conf.py  environment.yml  index.rst
notebooks/: Damask_first_steps.ipynb  First_Steps.ipynb  damask_first_steps.ipynb  damask_tutorial.ipynb  damask_tutorial_coldrolling-openphase.ipynb  damask_tutorial_coldrolling-regridding.ipynb  damask_tutorial_coldrolling.ipynb  damask_tutorial_elastoplasticity-isotropic.ipynb  damask_tutorial_elastoplasticity-powerlaw.ipynb  damask_tutorial_experimental.ipynb  damask_tutorial_experimental_dsms_data.ipynb  damask_tutorial_linearelastic.ipynb  damask_tutorial_multiplerolling.ipynb  damask_tutorial_output.ipynb  fenics_linear_elasticity_exercises.ipynb  fenics_membrane_under_gaussian_load.ipynb  fenics_precice_tutorial.ipynb  fenics_tutorial.ipynb  schroedinger_tutorial.ipynb  test_LinearElasticity_fenics_2023.ipynb  test_PoissonMembrane_fenics_2023.ipynb  test_mod.ipynb  test_pyiron_fenicsx_LinearElasticityCantilever.ipynb  test_pyiron_fenicsx_PoissonMembrane.ipynb
pyiron_continuum/: __init__.py  _version.py  mesh.py  project.py  toolkit.py
(+76 files in other folders)
